[gd_scene load_steps=8 format=3 uid="uid://cid2blrawv4w0"]

[ext_resource type="Script" path="res://script/minigames/passkey/passkey.gd" id="1_73q0k"]
[ext_resource type="Texture2D" uid="uid://dd08kqyqmtyuu" path="res://assets/solved.png" id="2_b4hxx"]
[ext_resource type="AudioStream" uid="uid://d0iyctykacjvx" path="res://assets/sound/combo_button_pressed.wav" id="3_i8xlb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hhh7j"]
atlas = ExtResource("2_b4hxx")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn6wy"]
atlas = ExtResource("2_b4hxx")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2o26v"]
atlas = ExtResource("2_b4hxx")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_15y66"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhh7j")
}],
"loop": true,
"name": &"in_progress",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jn6wy")
}],
"loop": true,
"name": &"solved",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2o26v")
}],
"loop": true,
"name": &"unsolved",
"speed": 5.0
}]

[node name="Passkey" type="Node2D"]
script = ExtResource("1_73q0k")

[node name="SolvedIndicator" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(48, 608)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_15y66")
animation = &"unsolved"

[node name="Label" type="Label" parent="."]
offset_left = 80.0
offset_top = 592.0
offset_right = 352.0
offset_bottom = 624.0
text = "Enter the correct passkey."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="GridContainer" parent="."]
offset_left = 32.0
offset_top = 176.0
offset_right = 352.0
offset_bottom = 528.0
columns = 3

[node name="Button1" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "1"

[node name="Button2" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "2"

[node name="Button3" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "3"

[node name="Button4" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "4"

[node name="Button5" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "5"

[node name="Button6" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "6"

[node name="Button7" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "7"

[node name="Button8" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "8"

[node name="Button9" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "9"

[node name="Button10" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "#"

[node name="Button11" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Button12" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "*"

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 32.0
offset_top = 80.0
offset_right = 352.0
offset_bottom = 144.0
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Answer" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.933333, 0, 1)
theme_override_font_sizes/font_size = 24

[node name="ResetButton" type="Button" parent="."]
offset_left = 32.0
offset_top = 544.0
offset_right = 352.0
offset_bottom = 575.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Reset"

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_i8xlb")

[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
